syntax = "proto3";
package mempool;

message CertificateDigest {
    bytes f_bytes = 1;
}

message GetCollectionsRequest {
    // Request message contains the list of collection ids to be retreived.
    repeated CertificateDigest collection_id = 1;
}

message GetCollectionsResponse {
    // Reply contains a placeholder not implemented message.
    string message = 1;
}

service Validator {
    rpc GetCollections (GetCollectionsRequest) returns (GetCollectionsResponse);
}